# demo_cpp

./: README.md
cmake_v1/: CMakeLists.txt  README.md  main.c
cmake_v2/: CMakeLists.txt  README.md  main.cc
cmake_v2/math/: MathFunctions.cc
cmake_v3/: CMakeLists.txt  README.md  main.cc
cmake_v3/math/: MathFunctions.cc  MathFunctions.h
compare_c_java/: HelloWorld.c  HelloWorld.cpp  HelloWorld.java  run.sh
composetest/: docker-compose.yml
demo_bazel/stage2/main/: BUILD
demo_boost/: build.sh  example
demo_ncnn/: CMakeLists.txt  main.cpp
demo_opencv/: CMakeLists.txt
demo_protobuf/: .gitignore  README.md  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  write.cpp
demo_protobuf/python/: README.txt  add_person.py  addressbook.proto  addressbook_data.pbtxt  addressbook_data.proto  addressbook_demo.ipynb  addressbook_pb2.py
demo_python/test1_pyobject/: test1.cpp  test1.py  test1.sh
demo_python/test2_boost/: setup.py  test2.cpp  test2.sh
demo_python/test3_boost/: test.cpp  test3.sh
demo_python/test_setup/: MANIFEST.in  README.md  setup.py
demo_python/test_setup/foo/: __init__.py
demo_so/: main.c  pr1.c
demo_so/动态库/: .gitignore  README.md  pr2.c
face_ncnn/: CMakeLists.txt  main.cpp
face_ncnn/arcface/: base.h
helloworld/: README.md  hello  hello.c  hello.cpp  hello.i  hello.s
