cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
message("++ OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage DisplayImage.cpp )
message("++ OpenCV_LIBS: " ${OpenCV_LIBS})
target_link_libraries( DisplayImage ${OpenCV_LIBS} )